[package]
name = "arcland-air"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

winit = "0.27"
image = "0.24"
raw-window-handle = "0.5"
ash = { version = "0.37.1+1.3.235", features = ["linked"] }
ash-window = "0.12"
