[package]
name = "arcland-air"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bytemuck = { version = "1", features = ["derive"] }
memoffset = "*"
winit = "0.27"
image = "0.24"
raw-window-handle = "0.5"
ash = { version = "0.37.1+1.3.235", features = ["linked"] }
ash-window = "0.12"

[dependencies.bevy]
version = "0.9"
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_gilrs",
    "bevy_gltf",
    "bevy_scene",
    "bevy_winit",
    # No render!
    "png",
    "hdr",
    "vorbis",
    "x11",
    "filesystem_watcher",
]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"