[package]
name = "arcland-air"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bytemuck = { version = "1", features = ["derive"] }
memoffset = "*"
winit = "0.27"
image = "0.24"
raw-window-handle = "0.5"

vulkano = "0.32"
vulkano-win = "0.32"
vulkano-shaders = "0.32"
vulkano-util = "0.32"

[dependencies.bevy]
version = "0.9"
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_gilrs",
#    "bevy_gltf",
#    "bevy_scene",
    "bevy_winit",
    # "render"
#    "png",
#    "hdr",
    "vorbis",
    "x11",
    "filesystem_watcher",
]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"